--- a/spec/api-v1.yaml
+++ b/spec/api-v1.yaml
@@ -1,11 +1,11 @@
-openapi: "3.0.0"
+openapi: "3.0.3"
 info:
   title: User Service
   version: 1.0.0
   license:
     name: MIT
 servers:
-- url: https://status-owl.de
+- url: https://api.status-owl.de
 paths:
   /users:
     post:
@@ -32,16 +32,61 @@ paths:
             application/problem+json:
               schema:
                 $ref: "#/components/schemas/Problem"
+  /users/{id}:
+    get:
+      summary: Find a user
+      operationId: FindUserByID
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          description: User ID
+          required: true
+          schema:
+            type: string
+          allowEmptyValue: false
+          example: dfg142sh1322hha
+      responses:
+        '200':
+          description: User found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        default:
+          description: User not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
 
 
 components:
   schemas:
+    User:
+      type: object
+      required:
+        - id
+        - email
+      properties:
+        id:
+          type: string
+          description: User ID
+          example: dfg142sh1322hha
+        name:
+          type: string
+          description: User name
+          example: John Doe
+        email:
+          type: string
+          description: Email address
+          example: john.doe@example.com
     CreateUserRequest:
       type: object
       required:
         - name
         - email
-        - password
       properties:
         name:
           type: string
@@ -51,10 +96,6 @@ components:
           type: string
           description: Email address
           example: john.doe@example.com
-        password:
-          type: string
-          description: Password
-          example: dgRe_sd12Adf7_Dt
     CreateUserResponse:
       type: object
       required:
@@ -84,7 +125,7 @@ components:
         detail:
           type: string
           description: A human-readable explanation specific to this occurrence of the problem.
-          example: "Email address is malfowmed"
+          example: "Email address is malformed"
         invalid-params:
           type: array
           items:
